Main menus + application name fix

--- a/src/app/_pages/login/login.component.scss
+++ b/src/app/_pages/login/login.component.scss
@@ -1,5 +1,5 @@
-#captia-banner {
-  background: url('../../../assets/images/banner-bg.png');
+#captai-banner {
+  background: url('../../../assets/images/new/orange-texture.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -15,12 +15,12 @@
   width: 100%;
   height: 100%;
   top: 0;
-  background: rgba(25, 98, 159, 0.75);
+  background: rgba(0, 0, 100, 0.25);
 }
 
 .title {
   color: #ffffff;
-  font-size: 48px;
+  font-size: 80px;
   font-weight: 500;
   z-index: 1;
   margin-bottom: 14px;
