--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="#">
     <img src="../assets/images/dell-tech-vertical-lead-branco-e-amarelo@2x.png" width="137" height="53" class="d-inline-block align-top" alt="" loading="lazy">
     <div class="title">
-      CaptIA
+      CaptAI
     </div>
   </a>
 
@@ -14,19 +14,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item hvr-underline-from-center">
-        <a class="nav-link" [routerLink]="['/home']" routerLinkActive="router-link-active">Início <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/home']" routerLinkActive="router-link-active">Recomendação <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item hvr-underline-from-center">
-        <a class="nav-link" [routerLink]="['/projects']" routerLinkActive="router-link-active">Projetos</a>
+        <a class="nav-link" [routerLink]="['/projects']" routerLinkActive="router-link-active">Calendário</a>
       </li>
       <li class="nav-item hvr-underline-from-center">
-        <a class="nav-link" [routerLink]="['/collaborators']" routerLinkActive="router-link-active">Colaboradores</a>
+        <a class="nav-link" [routerLink]="['/collaborators']" routerLinkActive="router-link-active">Pesquisa</a>
       </li>
       <li class="nav-item hvr-underline-from-center">
-        <a class="nav-link" [routerLink]="['/accountability']" routerLinkActive="router-link-active">Prestação de Contas</a>
+        <a class="nav-link" [routerLink]="['/accountability']" routerLinkActive="router-link-active">Subscrição</a>
       </li>
       <li class="nav-item hvr-underline-from-center">
-        <a class="nav-link" [routerLink]="['/suppliers']" routerLinkActive="router-link-active">Fornecedores</a>
+        <a class="nav-link" [routerLink]="['/suppliers']" routerLinkActive="router-link-active">Configurações</a>
       </li>
     </ul>
   </div>
