--- a/src/app/_pages/first-access/first-access.component.scss
+++ b/src/app/_pages/first-access/first-access.component.scss
@@ -1,26 +1,26 @@
-#captia-banner {
-    background: url('../../../assets/images/banner-bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    height: 377px;
-    position: relative;
-  }
-  
-  .blue-transparency {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    background: rgba(25, 98, 159, 0.75);
-  }
+#captai-banner {
+  background: url('../../../assets/images/new/orange-texture.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  align-items: center;
+  height: 377px;
+  position: relative;
+}
+
+.blue-transparency {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background: rgba(0, 0, 100, 0.25);
+}
   
   .title {
     color: #ffffff;
-    font-size: 48px;
+    font-size: 80px;
     font-weight: 500;
     z-index: 1;
     margin-bottom: 14px;
