--- a/src/app/_pages/login/login.component.html
+++ b/src/app/_pages/login/login.component.html
@@ -1,9 +1,6 @@
-<div id="captia-banner">
+<div id="captai-banner">
   <div class="blue-transparency"></div>
-  <div class="title">CaptIA</div>
-  <div class="logo">
-    <img src="../../../assets/images/dell-lead-branco-e-amarelo@2x.png">
-  </div>
+  <div class="title">CaptAI</div>
 </div>
 <div id="login-container">
   <form>
