--- a/src/app/_components/toast/toast.component.html
+++ b/src/app/_components/toast/toast.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex align-items-center">
       <span class="mr-3">
           <i *ngIf="color == '#6EA204'" class="icon ic-approved"></i>
-          <i *ngIf="color == '#CE1126'" class="icon ic-x-circle-solid"></i>
+          <i *ngIf="color == '#ce11261c'" class="icon ic-x-circle-solid"></i>
           <i *ngIf="color == '#007DB8'" class="icon ic-info-solid"></i>
       </span>
 
