--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,68 +1,40 @@
-.title {
-  border-left: 1px solid #fff;
-  padding: 1px 12px;
+.container-fluid{
+  position: fixed;
 }
-
-#navbarNav {
-  width: 60%;
-  // background: red;
-  height: 100%;
-  align-items: center;
-  justify-content: space-around;
-  margin: auto;
+.side-menu-body {
+  background-color: #f6f2dd;
+  width: 15%;
 }
-
-#navbarButtons {
-  width: 20%;
-  // background: magenta;
+#menu {
+  min-width: 100%;
+  margin-top: 15%;
+}
+.nav-item {
   height: 100%;
-  display: flex;
+  width: 85%;
+  padding-left: 15%;
+  align-self: end;
+  display: flex!important;
   align-items: center;
-  justify-content: flex-end;
-
-  .btn-icon-link {
-    color: #fff !important;
-    font-size: 16px !important;
-
-    &:hover span {
-      color: white !important;
-    }
+  padding: 6px 30px;
+  border-radius: 20px 0px 0px 20px;
+  margin: 4px 0px 4px 1px;
+  
+  span {
+    color: #000;
+    font-weight: bold;
+    font-size: 1rem;
   }
 }
-
-.router-link-active {
-  background-color: #00447C !important;
-  color: #fff !important;
+.item-selected {
+  background-color: #ffffff;
 }
-
-.hvr-underline-from-center {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  overflow: hidden;
+.user-img{
+  img {
+    width: 30px;
+    border-radius: 16px;
+  }
 }
-
-.hvr-underline-from-center:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 51%;
-  right: 51%;
-  bottom: 0;
-  background: #fff;
-  height: 4px;
-  -webkit-transition-property: left, right;
-  transition-property: left, right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
-  left: 0;
-  right: 0;
+.card-principal{
+  padding: 5%;
 }
