--- a/src/app/_components/main-dropdown-card/main-dropdown-card.component.html
+++ b/src/app/_components/main-dropdown-card/main-dropdown-card.component.html
@@ -1,14 +1,14 @@
 <div class="card-container">
-    <header class="card-header">
+   <!-- <header class="card-header">
         <img src="../../../assets/images/man.png"
             alt="" class="profile-img">
         <span class="mx-2">{{ user.fullname }}</span>
     </header>
-    <nav>
+     <nav>
         <a class="main-dropdown-item" (click)="navigate('EDIT')">Meu Perfil</a>
         <a *ngIf="user.role == 'ADMIN'" class="main-dropdown-item" (click)="navigate('CREATE')">Criar Perfil</a>
         <a class="main-dropdown-item" routerLink="users">Usuários e Permissões</a>
-    </nav>
+    </nav> -->
     <button class="main-dropdown-btn" (click)="logout()">
         <i class="icon ic-logout"></i>
         Sair
