--- a/src/app/_components/toast/toast.component.scss
+++ b/src/app/_components/toast/toast.component.scss
@@ -1,20 +1,21 @@
 .alertConfirmBar {
-  top: 4.46rem;
+  top: 1px;
   z-index: 9999;
-
+  span {
+    margin: 0px 6px;
+  }
   .alert {
-    color: white;
+    color: #be3f3f;
     padding: 0.5rem 1.25rem;
     border: none;
     border-radius: 0px;
-    box-shadow: 0 0 12px #999999;
-    margin: 0px 109px 10px 114px;
   }
 }
 
 .icon {
   font-size: 25px;
   margin-top: 5px;
+  color: #be3f3f;
 }
 
 .fadeIn {
