--- a/src/app/_pages/first-access/first-access.component.html
+++ b/src/app/_pages/first-access/first-access.component.html
@@ -1,3 +1,4 @@
+<div class="background"></div>
 <div id="captai-banner">
     <!-- <div class="blue-transparency"></div> -->
     <div class="title">CaptAI</div>
