--- a/src/app/_pages/first-access/first-access.component.scss
+++ b/src/app/_pages/first-access/first-access.component.scss
@@ -9,6 +9,15 @@
   height: 377px;
   position: relative;
 }
+.background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to bottom left, rgb(255 68 68 / 18%) 0%, rgba(255, 255, 255, 0) 25%);
+  z-index: -1;
+}
 
 .blue-transparency {
   position: absolute;
