--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 
 @import url('https://uicore.dellcdn.com/1.6.1/css/dds-fonts.css');
 
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 body {
   font-family: 'Roboto', sans-serif !important;
   overflow-x: hidden;
@@ -70,6 +72,26 @@ body {
     color: #cccccc;
   }
 
+}
+
+.ngx-slider-pointer {
+  background-color: #e43600 !important;
+  width: 25px !important;
+  height: 25px !important;
+  top: -11px !important;
+}
+.ngx-slider-pointer:after {
+  display: none;
+}
+.ngx-slider-bubble {
+  background-color: #e43600 !important;
+  color: #fff !important;
+}
+.ngx-slider-selection {
+  background-color: #e43600 !important;
+}
+.mat-mdc-form-field-has-icon-suffix .mat-mdc-text-field-wrapper {
+  border: 1px solid #5e5adb;
 }
 
 .btn {
@@ -202,9 +224,11 @@ body {
 }
 
 .container {
-  width: 100vw;
   padding: 0px 114px 56px 114px !important;
   max-width: 100vw !important;
+  border-radius: 13px;
+  background-color: #fbfaf4;
+  box-shadow: 0 1px 2px 1px #9191919c;
 }
 
 .list-group {
@@ -226,11 +250,17 @@ body {
 }
 
 .dropdown-menu {
-  border-radius: 0px;
-  padding: 4px 0;
+  border-radius: 20px;
+  padding: 0px;
   box-shadow: 0px 2px 5px #00000029;
 }
-.dropdown-item {
+.ng-dropdown-panel {
+  position: relative !important;
+}
+.ng-option {
+  border-top: 1px solid #c0c0c0;
+}
+/* .dropdown-item {
   font-size: 13px;
   padding: 8px 16px;
   letter-spacing: 0;
@@ -243,7 +273,7 @@ body {
 .dropdown-item:hover, .dropdown-item:focus {
   background-color: #F4F4F4;
 }
-
+ */
 .pill {
   background: #0076CE;
   padding: 4px 16px;
@@ -261,8 +291,15 @@ body {
     font-size: 16px;
   }
 }
-
-.modal-dialog {
+.button-orange-acept {
+  background-color: #e4531e;
+  border: none;
+  color: #fff;
+  width: 100%;
+  padding: 1%;
+  border-radius: 7px;
+}
+/* .modal-dialog {
   max-width: 80%;
 }
 .modal-content {
@@ -280,7 +317,7 @@ body {
     }
   }
 }
-
+ */
 /* Form Validation */
 .invalid-alert {
   color: red;
@@ -298,16 +335,16 @@ body {
 ::-webkit-scrollbar {
   height: 6px;
   width: 5px;
-  background: #dee2e6;
+  background: #0073e6;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
-  background: #aaa;
+  background: #1e0000;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
-  background: #aaa;
+  background: #d10a0a;
   border-radius: 10px;
 }
 
