--- a/src/styles.scss
+++ b/src/styles.scss
@@ -225,7 +225,9 @@ body {
 
 .container {
   padding: 0px 114px 56px 114px !important;
-  max-width: 100vw !important;
+  height: 85%;
+  min-width: 80%;
+  position: absolute;
   border-radius: 13px;
   background-color: #fbfaf4;
   box-shadow: 0 1px 2px 1px #9191919c;
