--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
   position: fixed;
 }
 .side-menu-body {
-  background-color: #f6f2dd;
+  background: linear-gradient(to bottom left, #efab958f -1%, #f6f2dd 9%);
   width: 15%;
 }
 #menu {
@@ -25,7 +25,13 @@
     font-weight: bold;
     font-size: 1rem;
   }
+  
 }
+
+.nav-perfil{
+  margin: 30% 0% 13%;
+}
+
 .item-selected {
   background-color: #ffffff;
 }
@@ -36,5 +42,5 @@
   }
 }
 .card-principal{
-  padding: 5%;
+  padding: 2.5%;
 }
