[main] - Ajust in menu links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
                   <span class="ms-1 d-none d-sm-inline">Recomendação</span>
                 </a>
             </li>
-            <li class="nav-item" routerLinkActive="item-selected">
+            <li class="nav-item">
               <a [routerLink]="['/']" class="nav-link align-middle px-0">
                 <span class="dds__icons dds__calendar"></span>
                 <span class="ms-1 d-none d-sm-inline">Calendário</span>
@@ -31,13 +31,13 @@
                 <span class="ms-1 d-none d-sm-inline">Pesquisa</span>
               </a>
             </li>
-            <li class="nav-item" routerLinkActive="item-selected">
+            <li class="nav-item">
               <a [routerLink]="['/']" class="nav-link align-middle px-0">
                 <span class="dds__icons dds__warranty"></span>
                 <span class="ms-1 d-none d-sm-inline">Subscrição</span>
               </a>
             </li>
-            <li class="nav-item" routerLinkActive="item-selected">
+            <li class="nav-item">
               <a [routerLink]="['/']" class="nav-link align-middle px-0">
                 <span class="dds__icons dds__gear"></span>
                 <span class="ms-1 d-none d-sm-inline">Settings</span>
